--- a/manifest.json
+++ b/manifest.json
@@ -13,6 +13,18 @@
         "default_icon": "icon_128.png",
         "default_popup": "popup.html"
     },
+    "content_scripts": [{
+        "matches": [
+            "http://*/*",
+            "https://*/*"
+            ],
+            "js": ["content.js"],
+            "run_at": "document_end"
+        }
+    ],
     "permissions": [
+        "storage",
+        "tabs",
+        "<all_urls>"
     ]
 }
